# django-contractor

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
contractor/: __init__.py  admin.py  apps.py  cms_models.py  cms_plugins.py  models.py  tasks.py  urls.py  utils.py  views.py
contractor/migrations/: 0001_initial.py  0002_contract_webhook_active.py
contractor/templates/admin/contractor/contract/: change_form.html
contractor/templates/contractor/: render.html
