[project]
name = "django-contractor"
version = "0.0.8"
description = "Fetch media files that were build elsewhere"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
